Default HashTraits for Opcode don't work for Opcode = 0 https://bugs.webkit.org/show_bug.cgi?id=75595

Reviewed by Oliver Hunt.

Removed the populating of the m_opcodeIDTable table in the
case where the OpcodeID and Opcode are the same (m_enabled is false).
Instead we just cast the one type to the other.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::initialize):
(JSC::Interpreter::isOpcode):
* interpreter/Interpreter.h:
(JSC::Interpreter::getOpcodeID):


Canonical link: https://commits.webkit.org/92545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104338 268f45cc-cd09-0410-ab3c-d52691b4dbfc